@@ -1,3 +1,4 @@
+2016-11-16 Removed unicode special characters from Shape Tracing comments
 2016-11-08 Fixed width calculating in Table addon.
 2016-11-03 Fixed showAnswer, setShowErrorMode bugs in Grid Scene addon.
 2016-11-03 Added Blockly Code Editor addon. Fixed bugs in Grid Scene. Added property Editable Select and Select for list.
